--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "devDependencies": {
     "grunt-contrib-concat": "~0.1.2",
     "grunt-contrib-coffee": "~0.4.0",
-    "grunt-contrib-compass": "~0.1.1",
+    "grunt-contrib-stylus": "~0.5.0",
     "grunt-contrib-cssmin": "~0.4.0",
     "grunt-contrib-uglify": "~0.1.1",
     "grunt-contrib-watch": "~0.2.0",
