--- a/bower.json
+++ b/bower.json
@@ -9,6 +9,7 @@
     "jquery": "~2.0.0",
     "cjs": "latest",
     "jquery.scrollTo": "~1.4.6",
-    "jquery-waypoints": "~2.0.3"
+    "jquery-waypoints": "~2.0.3",
+    "jquery-placeholder": "~2.0.7"
   }
 }
