--- a/package.json
+++ b/package.json
@@ -2,7 +2,10 @@
   "name": "peterhenrikson",
   "private": "true",
   "version": "0.1.0",
-  "dependencies": {},
+  "dependencies": {
+    "express": "~3.4.6",
+    "emailjs": "~0.3.6"
+  },
   "devDependencies": {
     "grunt": "~0.4.1",
     "matchdep": "~0.3.0",
@@ -12,7 +15,8 @@
     "grunt-contrib-copy": "~0.4.1",
     "grunt-contrib-stylus": "~0.5.0",
     "grunt-contrib-connect": "~0.3.0",
-    "grunt-contrib-clean": "~0.4.1"
+    "grunt-contrib-clean": "~0.4.1",
+    "grunt-express-server": "~0.4.9"
   },
   "scripts": {
     "install": "bower install"
