--- a/bower.json
+++ b/bower.json
@@ -10,6 +10,7 @@
     "cjs": "latest",
     "jquery.scrollTo": "~1.4.6",
     "jquery-waypoints": "~2.0.3",
-    "jquery-placeholder": "~2.0.7"
+    "jquery-placeholder": "~2.0.7",
+    "jquery-form": "~3.46.0"
   }
 }
