--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
   "version": "0.1.0",
   "dependencies": {
     "express": "~3.4.6",
-    "emailjs": "~0.3.6"
+    "emailjs": "~0.3.6",
+    "jade": "~0.35.0"
   },
   "devDependencies": {
     "grunt": "~0.4.1",
