--- a/package.json
+++ b/package.json
@@ -4,8 +4,8 @@
   "version": "0.1.0",
   "dependencies": {
     "express": "~3.4.6",
-    "emailjs": "~0.3.6",
-    "jade": "~0.35.0"
+    "jade": "~0.35.0",
+    "nodemailer": "~0.5.14"
   },
   "devDependencies": {
     "grunt": "~0.4.1",
