--- a/package.json
+++ b/package.json
@@ -5,7 +5,8 @@
   "dependencies": {
     "express": "~3.4.6",
     "jade": "~0.35.0",
-    "nodemailer": "~0.5.14"
+    "nodemailer": "~0.5.14",
+    "moment": "~2.4.0"
   },
   "devDependencies": {
     "grunt": "~0.4.1",
