--- a/bower.json
+++ b/bower.json
@@ -11,6 +11,7 @@
     "jquery.scrollTo": "~1.4.6",
     "jquery-waypoints": "~2.0.3",
     "jquery-placeholder": "~2.0.7",
-    "jquery-form": "~3.46.0"
+    "jquery-form": "~3.46.0",
+    "jquery-backstretch": "~2.0.4"
   }
 }
