--- a/bower.json
+++ b/bower.json
@@ -12,7 +12,7 @@
     "jquery-waypoints": "~2.0.3",
     "jquery-placeholder": "~2.0.7",
     "jquery-form": "~3.46.0",
-    "jquery-backstretch": "~2.0.4",
-    "humane-js": "~3.1.0"
+    "humane-js": "~3.1.0",
+    "parsleyjs": "~1.2.2"
   }
 }
