--- a/bower.json
+++ b/bower.json
@@ -13,6 +13,9 @@
     "jquery-placeholder": "~2.0.7",
     "jquery-form": "~3.46.0",
     "humane-js": "~3.1.0",
-    "parsleyjs": "~1.2.2"
+    "parsleyjs": "~1.2.2",
+    "swiper": "~2.4.1",
+    "Font-Awesome": "~4.0.3",
+    "Skeleton": "git@github.com:dhg/Skeleton.git"
   }
 }
