--- a/package.json
+++ b/package.json
@@ -7,7 +7,9 @@
     "matchdep": "~0.3.0",
     "grunt-contrib-requirejs": "~0.4.1",
     "grunt-contrib-watch": "~0.4.3",
-    "grunt-contrib-stylus": "~0.5.0"
+    "grunt-contrib-stylus": "~0.5.0",
+    "stylus": "~0.41.3",
+    "grunt-contrib-copy": "~0.5.0"
   },
   "scripts": {
     "install": "bower install"
